--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1004,7 +1004,11 @@ footer {
   @media (max-width: 768px) {
     .recipe-content-container,
     .ingredient-content-container {
-      top: 58px; } }
+      top: 58px;
+      margin: 0 auto 22px; } }
+
+.ingredient-content-container p {
+  padding: 0 20px; }
 
 .recipe-content-container {
   margin: 0 auto 20px; }
@@ -1245,6 +1249,11 @@ a ~ .recipe-row-bottom {
   height: 80px;
   float: left;
   margin-right: 18px; }
+  @media (max-width: 500px) {
+    .ingredient img {
+      float: none;
+      display: block;
+      margin: 2px auto; } }
 
 .ingredient {
   width: 30%;
@@ -1252,6 +1261,12 @@ a ~ .recipe-row-bottom {
   padding: 8px;
   box-sizing: border-box;
   margin: 10px; }
+  @media (max-width: 768px) {
+    .ingredient {
+      float: none;
+      display: inline-block;
+      width: 48%;
+      margin: 2px; } }
 
 .ingredient p {
   padding: 0;
@@ -1264,6 +1279,10 @@ a ~ .recipe-row-bottom {
 .ingredient-content-container button {
   font-size: 14px;
   margin: 30px 0; }
+  @media (max-width: 768px) {
+    .ingredient-content-container button {
+      font-size: 11px;
+      margin: 15px 0; } }
 
 .fa-exclamation-circle {
   color: #f00; }
@@ -1284,6 +1303,13 @@ a ~ .recipe-row-bottom {
 
 .details-container {
   float: left; }
+  @media (max-width: 500px) {
+    .details-container {
+      float: none; }
+      .details-container p {
+        display: block;
+        width: 100%;
+        text-align: center; } }
 
 .add-edit-ingredient-section {
   margin-top: 65px;
@@ -1916,6 +1942,9 @@ ul {
   @media (max-width: 1024px) {
     .header-container {
       height: 360px; } }
+  @media (max-width: 500px) {
+    .header-container {
+      height: 265px; } }
 
 .spill-text {
   white-space: nowrap; }
