Updated styling for view_recipe.html so that it renders correctly on all device sizes

--- a/static/css/components/pages.scss
+++ b/static/css/components/pages.scss
@@ -1241,6 +1241,10 @@ a ~ .recipe-row-bottom {
 .view-recipe-section,
 .edit-recipe-section {
     margin-top: 65px;
+    
+    @include large-tablet {
+        margin-top: 58px;
+    }
 }
 .edit-recipe-section {
     background-color: rgba(0,0,0,.8);
@@ -1269,6 +1273,10 @@ a ~ .recipe-row-bottom {
     height: 350px;
     position: relative;
     top: 1px;
+    
+    @include large-mobile {
+        height: 200px;
+    }
 }
 
 .image-container ~ h1 {
@@ -1297,6 +1305,12 @@ a ~ .recipe-row-bottom {
     border-radius: 20px 20px 0 0;
 }
 
+.recipe-details-container {
+    @include large-mobile {
+        padding: 0 10px;
+    }
+}
+
 .recipe-details-container img {
     height: 50px;
 }
@@ -1311,6 +1325,10 @@ a ~ .recipe-row-bottom {
     display: inline-block;
     clear: none;
     margin: 0 20px 0 0;
+    
+    @include large-tablet {
+        margin: 0 10px 0 0;
+    }
 }
 
 .recipe-info-container p {
@@ -1328,6 +1346,27 @@ a ~ .recipe-row-bottom {
     @extend %centralise-inner-container;
     justify-content: unset;
     margin: 20px 0;
+    
+    @include large-tablet {
+        justify-content: center;
+    }
+}
+
+.recipe-details-container .row:nth-of-type(1){
+    @include large-mobile {
+        display: block;
+        
+        p {
+            line-height: 16px;
+            margin-bottom: 5px;
+            font-size: 12px;
+        }
+        
+        h2 {
+            margin-bottom: 5px;
+            font-size: 14px;
+        }
+    }
 }
 
 .recipe-info-container .row p {
@@ -1339,6 +1378,23 @@ a ~ .recipe-row-bottom {
     float: none;
     width: 100%;
     margin-bottom: 20px;
+    
+    @include tablet {
+        text-align: center;
+    }
+}
+
+.data1,
+.data2 {
+    display: inline-block;
+    
+    @include large-mobile {
+        display: block;
+        
+        h2, p {
+            float: none;
+        }
+    }
 }
 
 .recipe-instructions p,
@@ -1356,8 +1412,72 @@ a ~ .recipe-row-bottom {
     width: 150px;
 }
 
+.recipe-instructions td:nth-of-type(1),
+.recipe-instructions th:nth-of-type(1) {
+    min-width: 50px;
+    width: 50px;
+    
+    @include large-mobile {
+        min-width: 25px;
+        width: 25px;
+    }
+}
+
+.recipe-details-container .instructions-and-ingredients {
+    align-items: normal;
+    
+    @include large-tablet {
+        display: block;
+    }
+}
+
+.instructions-and-ingredients .instructions-row,
+.instructions-and-ingredients .ingredients-row {
+    display: inline-block;
+    box-sizing: border-box;
+    padding-top: 20px;
+    
+    @include large-tablet {
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+    }
+    
+    @include large-mobile {
+        padding-top: 5px;
+        width: 90%;
+    }
+}
+
+.instructions-row {
+    width: 55%;
+    @include large-tablet {
+        border-bottom: solid 1px #9a9a9a;
+    }
+}
+
+.ingredients-row {
+    width: 40%;
+    border-left: solid 1px #9a9a9a;
+    padding-left: 40px;
+    
+    @include large-tablet {
+        border-left: none;
+        padding-left: 0px;
+    }
+}
+
+.recipe-instructions th,
+.ingredients-table-header th {
+    color: $fire-red;
+}
+
+.recipe-instructions td:nth-of-type(2){
+    width: unset;
+}
+
 .inserted-ingredient-row td:nth-of-type(3){
-    width: 265px;
+    width: 50px;
 }
 
 .ingredients-table-header td,
@@ -1377,6 +1497,13 @@ a ~ .recipe-row-bottom {
     width: 100%;
     letter-spacing: 0.5px;
     font-size: 16px;
+}
+
+.recipe-ingredients .no-ingredients-row td,
+.recipe-instructions .no-instructions-row td {
+    width: 100%;
+    white-space: normal;
+    margin-bottom: 38px;
 }
 
 // Edit Recipes ----------------------------------------------------------------
@@ -1402,6 +1529,18 @@ a ~ .recipe-row-bottom {
 .edit-recipe-container input {
     width: 300px;
     margin-right: 20px;
+}
+
+.recipe-details-section {
+    min-height: 650px;
+    
+    @include tablet {
+        min-height: 500px;
+    }
+    
+    @include large-mobile {
+        min-height: 300px;
+    }
 }
 
 .recipe-details-1,
@@ -1477,14 +1616,24 @@ a ~ .recipe-row-bottom {
     display: flex;
     align-items: center;
     background-color: $white;
-    margin: 10px;
+    margin: 1px 10px;
     padding: 5px;
+    
+    @include large-mobile {
+        margin: 0;
+        padding: 0;
+        min-height: 45px;
+    }
 }
 
 .ingredients-table-header th,
 .inserted-ingredient-row td {
     margin: 0;
-    width: 190px;
+    width: 160px;
+    
+    @include large-mobile {
+        width: 50%;
+    }
 }
 
 td > img {
@@ -1544,17 +1693,22 @@ td > img {
     margin: 0 20px 0 0;
 }
 
-.inserted-instruction-row {
+.recipe-instructions .inserted-instruction-row,
+.recipe-instructions .inserted-ingredient-row {
     display: flex;
     align-items: center;
-    height: 50px;
+    min-height: 45px;
     background-color: $white;
-    margin: 10px;
+    font-size: 16px;
 }
 
 .instructions-list-table,
 .ingredients-list-table {
     display: none;
+    
+    @include large-mobile {
+        width: 100%;
+    }
 }
 
 .recipe-existing-instructions,
